--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-yellowground: var(--yellowground, #f7f7f7);
+  --color-grayground: var(--grayground, #f0f0f0);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
@@ -15,7 +17,10 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #8b332b;
+    --yellowground: #e0a636;
+    --grayground: #383838;
+
   }
 }
 
@@ -23,4 +28,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: x-large;
 }
