--- a/app/globals.css
+++ b/app/globals.css
@@ -27,6 +27,13 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
   font-size: x-large;
+}
+
+.writing{
+  font-family: var(--font-writing);
+}
+
+.title{
+  font-family: var(--font-title);
 }
